# Public-John-Guard

./: .gitignore  CMakeLists.txt  README.md
src/: johnguard_plugin.cpp  johnguard_plugin.h
src/anticheat/: check.h  manager.h
src/anticheat/extra/: manualFlagger.h  syn.h
src/anticheat/modules/: botA.h  botB.h  botC.h  botD.h  deviceSpooferA.h  deviceSpooferB.h  deviceSpooferC.h  deviceSpooferD.h  hwidSpooferA.h  register.h
src/events/: packetReceive.h  packetSend.h  playerQuit.h
src/handlers/packetReceive/: entityEventPacket.h  loginPacket.h
src/handlers/packetSend/: blockEventPacket.h  movePlayerPacket.h
src/util/: config.h  discord.cpp  discord.h
src/util/decoder/: util.h
src/util/packets/: blockEvent.cpp  blockEvent.h  disconnect.cpp  disconnect.h  entityEvent.cpp  entityEvent.h  login.cpp  login.h  util.cpp  util.h
